# population_scam_simulation

./: .gitignore  Cargo.toml  README.md
console/: Cargo.toml
simulation/: Cargo.toml
simulation/src/: lib.rs
src/: app.rs  canvas.rs  lib.rs  view.rs
webapp/: Cargo.toml
webapp/src/: main.rs
