[package]
version = "0.1.0"
name = "population-scam-simulation"
repository = "https://github.com/seed-rs/seed-quickstart"
authors = ["Joseph Catrambone <jo.jcat@gmail.com>"]
description = "App Description"
categories = ["category"]
license = "MIT"
readme = "./README.md"
edition = "2021"

[workspace]
members = [
  "simulation",
  "webapp",
]




