[workspace]
members = [
  "simulation",
  "console",
  "webapp",
]

# If a [workspace] is present, [package] is optional.
# If [package] is present it defines the root package.  If it's not, this is called a 'virtual manifest'.
# See more at https://doc.rust-lang.org/cargo/reference/workspaces.html

#[profile.release]
#lto = true
#opt-level = 'z'
#codegen-units = 1

#[package.metadata.wasm-pack.profile.release]
#wasm-opt = ['-Os']


